--- a/app/components/news-item/view-panel.hbs
+++ b/app/components/news-item/view-panel.hbs
@@ -43,6 +43,7 @@
         class="auk-u-overflow-wrap-anywhere"
         @raw={{true}}
         @value={{@newsItem.htmlContent}}
+        @options={{this.sanitizeHtmlOptions}}
       />
     </AuContent>
   </Auk::Panel::Body>
