KAS-3835 Add more radio and fieldset styling overrides

--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -274,7 +274,14 @@ $au-button-height: 3.4rem;
 }
 
 // Radio
+.auk-radio-list {
+  display: flex;
+  flex-direction: column;
+  gap: $au-unit-tiny;
+}
+
 .auk-radio-list--inline {
+  flex-direction: row;
   gap: $au-unit;
 }
 
