--- a/app/components/themis-publications/unpublish-confirmation-modal.hbs
+++ b/app/components/themis-publications/unpublish-confirmation-modal.hbs
@@ -4,21 +4,21 @@
     @onClose={{@onCancel}}
   />
   <Auk::Modal::Body>
-    <fieldset>
-      <legend class="auk-label">
-        {{t "unpublish-publication-scope-selection"}}
-      </legend>
-      <Auk::RadioList as |List|>
-        {{#each this.options as |option|}}
-          <List.Radio
-            @label={{option.label}}
-            @checked={{eq this.selectedOption.value option.value}}
-            value={{option.value}}
-            {{on "change" this.selectOption}}
-          />
-        {{/each}}
-      </Auk::RadioList>
-    </fieldset>
+    <AuFieldset as |Fieldset|>
+      <Fieldset.legend>{{t "unpublish-publication-scope-selection"}}</Fieldset.legend>
+      <Fieldset.content>
+        <Auk::RadioList as |List|>
+          {{#each this.options as |option|}}
+            <List.Radio
+              @label={{option.label}}
+              @value={{option.value}}
+              @onChange={{this.selectOption}}
+              checked={{eq this.selectedOption.value option.value}}
+            />
+          {{/each}}
+        </Auk::RadioList>
+      </Fieldset.content>
+    </AuFieldset>
   </Auk::Modal::Body>
   <Auk::Modal::Footer @onCancel={{@onCancel}}>
     <AuButton
