--- a/app/components/utils/radio-dropdown-combo-select.hbs
+++ b/app/components/utils/radio-dropdown-combo-select.hbs
@@ -1,35 +1,36 @@
-<div class="auk-radio-list auk-radio-list--inline">
+{{!-- TODO: when a new radio-list component is added to the ember-appuniversum library, replace the HTML below with the correct components --}}
+<div class="auk-radio-list auk-radio-list--inline auk-u-mb-2">
   {{#each this.radioOptions as |opt index|}}
     {{#let (concat this.radioName "-" index) as |radioId|}}
-      <label class="auk-radio" data-children-count="1" for={{radioId}}>
+      <label class="au-c-control au-c-control--radio" data-children-count="1" for={{radioId}}>
         <input
           data-test-radio-dropdown-input
           type="radio"
-          class="auk-radio__toggle"
+          class="au-c-control__input"
           id={{radioId}}
           name={{this.radioName}}
           checked={{eq opt this.selectedOption}}
           value={{get opt this.labelKey}}
           {{on "input" (fn this.select opt)}}
         />
+        <span class="au-c-control__indicator"></span>
         {{get opt this.labelKey}}
-        <span class="auk-radio__box"></span>
       </label>
     {{/let}}
   {{/each}}
   {{#let (concat this.radioName "-" "others") as |radioId|}}
-    <label class="auk-radio" data-children-count="1" for={{radioId}}>
+    <label class="au-c-control au-c-control--radio" data-children-count="1" for={{radioId}}>
       <input
         type="radio"
-        class="auk-radio__toggle"
+        class="au-c-control__input"
         id={{radioId}}
         name={{this.radioName}}
         checked={{this.selectedIsInOthers}}
         value="Andere"
         {{on "input" this.showOthers}}
       />
+      <span class="au-c-control__indicator"></span>
       {{t "option-others"}}
-      <span class="auk-radio__box"></span>
     </label>
   {{/let}}
 </div>
