--- a/app/components/subcase/timeline.hbs
+++ b/app/components/subcase/timeline.hbs
@@ -7,7 +7,7 @@
       >
         <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            {{subcase-timeline-item-text phase=phase}}
+            {{this.subcaseTimelineItemText phase}}
           </div>
       </li>
     {{/each}}
