KAS-3836 Adjust styleguide docs regarding radio component & split up toggle documentation

--- a/app/templates/styleguide/radio-list.hbs
+++ b/app/templates/styleguide/radio-list.hbs
@@ -1,5 +1,5 @@
 {{!-- template-lint-disable  --}}
-<ComponentPageIntro @title="Radio buttons" />
+<ComponentPageIntro @title="Radio list" />
 
 <StyleguideSample
         @title="Radio button"
@@ -32,26 +32,5 @@
       </Auk::RadioList>
     </Fieldset.content>
   </AuFieldset>
-  {{!-- END-SNIPPET --}}
-</StyleguideSample>
-
-<StyleguideSample
-        @title="Toggle"
-        @snippet="toggle.hbs">
-  {{!-- BEGIN-SNIPPET toggle --}}
-  <div class="auk-form-group">
-    <Auk::Label for="toggle1">Label 1</Auk::Label>
-    <Auk::Toggle id="toggle1" @checked={{true}} />
-  </div>
-
-  <div class="auk-form-group">
-    <Auk::Label for="toggle2">Label 2</Auk::Label>
-    <Auk::Toggle id="toggle2" />
-  </div>
-
-  <div class="auk-form-group">
-    <Auk::Label for="toggle3">Label 3</Auk::Label>
-    <Auk::Toggle id="toggle3" @checked={{true}} @disabled={{true}} />
-  </div>
   {{!-- END-SNIPPET --}}
 </StyleguideSample>
