--- a/app/templates/styleguide/search-results-list.hbs
+++ b/app/templates/styleguide/search-results-list.hbs
@@ -25,8 +25,8 @@
       <Auk::SearchResultsList::Item @route="styleguide.brand">
         Brand
       </Auk::SearchResultsList::Item>
-      <Auk::SearchResultsList::Item @route="styleguide.radio-buttons">
-        Radio buttons
+      <Auk::SearchResultsList::Item @route="styleguide.radio-list">
+        Radio list
       </Auk::SearchResultsList::Item>
       <Auk::SearchResultsList::Item @route="styleguide.color-badge">
         Color badge
