--- a/app/templates/styleguide.hbs
+++ b/app/templates/styleguide.hbs
@@ -66,9 +66,6 @@
             <LinkTo @route="styleguide.checkbox-tree">Checkbox tree</LinkTo>
           </li>
           <li>
-            <LinkTo @route="styleguide.radio-buttons">{{t "style-guide-radio-buttons"}}</LinkTo>
-          </li>
-          <li>
             <LinkTo @route="styleguide.color-badge">Color badges</LinkTo>
           </li>
           <li>
@@ -93,6 +90,9 @@
             <LinkTo @route="styleguide.panel">Panel</LinkTo>
           </li>
           <li>
+            <LinkTo @route="styleguide.radio-list">{{t "style-guide-radio-list"}}</LinkTo>
+          </li>
+          <li>
             <LinkTo @route="styleguide.search-results-list">{{t "style-guide-search-results-list"}}</LinkTo>
           </li>
           <li>
@@ -100,6 +100,9 @@
           </li>
           <li>
             <LinkTo @route="styleguide.tabs">{{t "style-guide-tabs"}}</LinkTo>
+          </li>
+          <li>
+            <LinkTo @route="styleguide.toggle">{{t "style-guide-toggle"}}</LinkTo>
           </li>
           <li>
             <LinkTo @route="styleguide.toolbar">{{t "style-guide-toolbar"}}</LinkTo>
