--- a/app/components/web-components/vl-rdfa-editor.hbs
+++ b/app/components/web-components/vl-rdfa-editor.hbs
@@ -1,25 +1,27 @@
-{{#if this.browserIsSupported}}
-  <Rdfa::RdfaEditor
-    @class="rdfa-editor"
-    @rdfaEditorInit={{@handleRdfaEditorInit}}
-    @profile="default"
-    @editorOptions={{hash
-      showToggleRdfaAnnotations=null
-      showInsertButton=null
-      showRdfa=null
-      showRdfaHighlight=null
-      showRdfaHover=null
-    }}
-    @toolbarOptions={{hash
-      showTextStyleButtons="true"
-      showListButtons="true"
-      showIndentButtons=null
-    }}
-  />
-{{else}}
-  <Auk::Alert
-    @skin="warning"
-    @title={{t "browser-unsupported-short"}}
-    @message={{t "browser-unsupported-editor" browserName=this.browserName}}
-  />
-{{/if}}
+<div ...attributes>
+  {{#if this.browserIsSupported}}
+    <Rdfa::RdfaEditor
+      @class="rdfa-editor"
+      @rdfaEditorInit={{@handleRdfaEditorInit}}
+      @profile="default"
+      @editorOptions={{hash
+        showToggleRdfaAnnotations=null
+        showInsertButton=null
+        showRdfa=null
+        showRdfaHighlight=null
+        showRdfaHover=null
+      }}
+      @toolbarOptions={{hash
+        showTextStyleButtons="true"
+        showListButtons="true"
+        showIndentButtons=null
+      }}
+    />
+  {{else}}
+    <Auk::Alert
+      @skin="warning"
+      @title={{t "browser-unsupported-short"}}
+      @message={{t "browser-unsupported-editor" browserName=this.browserName}}
+    />
+  {{/if}}
+</div>
