--- a/app/components/search/minister-filter.hbs
+++ b/app/components/search/minister-filter.hbs
@@ -1,12 +1,13 @@
 <div class="au-c-card au-o-box au-o-box--small">
   <div class="auk-form-group">
     <Auk::Label for="ministerName">
-      Minister
+      {{t "minister"}}
     </Auk::Label>
     <AuInput
       data-test-route-search-mandatee-input
       @width="block"
-      @value={{this.mandateesBuffer}}
+      @value={{@mandatees}}
+      {{on "input" @onChange}}
       id="ministerName"
     />
   </div>
