--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -20,6 +20,15 @@
 {{/in-element}}
 <div class="au-o-box au-o-box--small">
   {{#if this.model.length}}
+    <Search::ResultsHeader
+      @pageSize={{this.size}}
+      @pageIdx={{this.page}}
+      @nbOfItems={{this.model.length}}
+      @searchText={{this.searchText}}
+      @searchType={{t "agenda"}}
+      @onSortChange={{this.selectSort}}
+      @sortOptions={{this.sortOptions}}
+    />
     <DataTable
       data-test-route-search-cases-data-table={{true}}
       @content={{await this.model}}
