--- a/app/templates/search/agenda-items.hbs
+++ b/app/templates/search/agenda-items.hbs
@@ -34,6 +34,7 @@
       @searchType={{t "agenda"}}
       @onSortChange={{this.selectSort}}
       @sortOptions={{this.sortOptions}}
+      @sort={{this.sort}}
     />
     <DataTable
       data-test-route-search-agendaitems-data-table={{true}}
