--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -28,6 +28,7 @@
       @searchType={{t "agenda"}}
       @onSortChange={{this.selectSort}}
       @sortOptions={{this.sortOptions}}
+      @sort={{this.sort}}
     />
     <DataTable
       data-test-route-search-cases-data-table={{true}}
