forgot to change links

--- a/app/components/search/navigation.hbs
+++ b/app/components/search/navigation.hbs
@@ -11,7 +11,7 @@
       </AuNavigationLink>
     </li>
     <li class="au-c-list-navigation__item">
-      <AuNavigationLink @route="search.agenda-items">
+      <AuNavigationLink @route="search.agendaitems">
         {{t "agenda"}}
       </AuNavigationLink>
     </li>
