changed searchType for cases

--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -25,7 +25,7 @@
       @pageIdx={{this.page}}
       @nbOfItems={{this.model.length}}
       @searchText={{this.searchText}}
-      @searchType={{t "agenda"}}
+      @searchType={{t "cases"}}
       @onSortChange={{this.selectSort}}
       @sortOptions={{this.sortOptions}}
       @sort={{this.sort}}
